# QuantitativeTrading

./: readme.txt
BackTraderCN/cpp/: CMakeLists.txt
BackTraderCN/cpp/demo.ctp/: CMakeLists.txt  CtpDaemon.cpp  CtpMD.cpp  CtpMD.h  CtpTD.cpp  CtpTD.h  ctp_config.json
BackTraderCN/cpp/test_case/: CMakeLists.txt  test_json.cpp
